--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BandSite</title>
+    <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
     
+    <nav class="navigation">
+        <div class="navigation__icon">
+                <img src="./3.0 - Assets/Logo/Logo-bandsite.svg" alt="Bandsite Logo">
+        <div class="navigation__menu">
+            <ul>
+                <li>Biography</li>
+                <li>Shows</li>
+            </ul>
+        </div> 
+       </div>
+     </nav>
+
+    <section class="hero">
+    </section>
+
+    <article class="about">
+    </article>
+
+    <section class="gallery">
+    </section>
+
+    <footer>
+    </footer>
+
 </body>
+
 </html>
