Hero image - Added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
-    
+
     <nav class="navigation">
         <div class="navigation__icon">
                 <img src="./3.0 - Assets/Logo/Logo-bandsite.svg" alt="Bandsite Logo">
@@ -21,7 +21,13 @@
        </div>
      </nav>
 
-    <section class="hero">
+    <section>
+        <div class="heroimage">       
+            <img class="heroimage__overlay" src="./3.0 - Assets/Images/hero-bio.jpg" alt="The Bees Knees">
+            <div class="heroimage__text">
+                <h3>The Bees Knees</h3>   
+            </div>
+        </div>
     </section>
 
     <article class="about">
